Prevent pictures in left nav from getting too big

--- a/site/app/stylesheets/_community.scss
+++ b/site/app/stylesheets/_community.scss
@@ -18,6 +18,10 @@
   > div { margin-bottom: 15px; }
   .block-stats { clear: both; }
 }
+.column-nav .picture img {
+  max-width: 35px;
+  max-height: 35px;
+}
 
 .links > a,
 .links > span { 
